# roomba

./: Cargo.toml  README.md
roomba/: Cargo.toml
roomba-cli/: Cargo.toml  README.md
roomba-cli/src/: api.rs  cli.rs  main.rs  tui.rs
roomba-gui/: Cargo.toml
roomba-gui/src/: main.rs
roomba-tui/: Cargo.toml
roomba-tui/src/: main.rs
roomba-tui/src/util/: event.rs  mod.rs
roomba/src/: api.rs  client.rs  lib.rs
src/: client.rs
