[package]
name = "roomba-s9plus-cli"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
description = "CLI to control the Roomba S9+"
homepage = "https://github.com/cecton/roomba-s9plus-cli"
repository = "https://github.com/cecton/roomba-s9plus-cli"
documentation = "https://docs.rs/roomba-s9plus-cli"
readme = "README.md"
keywords = ["roomba"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6"
dirs = "3.0"
env_logger = "0.7"
futures = "0.3"
roomba = { path = "../roomba", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
