[package]
name = "roomba-s9plus-cli"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
description = "CLI to control the Roomba S9+"
homepage = "https://github.com/cecton/roomba-s9plus-cli"
repository = "https://github.com/cecton/roomba-s9plus-cli"
documentation = "https://docs.rs/roomba-s9plus-cli"
readme = "README.md"
keywords = ["roomba"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11"
dirs = "3.0"
env_logger = "0.7"
futures = "0.3"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", rev = "47eb3eaee53a9e5f3687f9120b20d15a22a7bb9f" }
roomba = { path = "../roomba", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
termion = "1.5"
toml = "0.5"
tui = "0.10"
