[package]
name = "roomba-tui"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3"
roomba = { path = "../roomba", version = "0.1" }
termion = "1.5"
tui = "0.10"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", rev = "47eb3eaee53a9e5f3687f9120b20d15a22a7bb9f" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
